<resources>
    <string name="app_name">Mekatech</string>
    <string name="createAccount_textView">Create an account</string>
    <string name="firstName_editText"></string>
    <string name="lastName_editText"></string>
    <string name="email_editText"></string>
    <string name="password_editText"></string>
    <string name="passwordConf_editText"></string>
    <string name="gender_textView">Gender</string>
    <string name="female_rBtn">Female</string>
    <string name="male_rBtn">Male</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Log in</string>

    <!--    Dashboard variables-->
    <string name="dashboardGreeting_textView">Welcome to Mekatech!</string>
    <string name="findHelp_btn">Find help!</string>
    <!--    Find help activity-->
    <string-array name="typeOfsection_array">
        <item>Engine</item>
        <item>Transmission</item>
        <item>Suspension</item>
        <item>Brakes</item>
        <item>Exhaust</item>
        <item>Electrical</item>
        <item>HVAC</item>
        <item>Wheel</item>
    </string-array>

    <!--    Garage variables-->
    <string name="yourGarage_textView">Your garage</string>
    <string name="userCar_textView">No car in your garage</string>
    <string name="addUpdateCar_btn">Add/Change your garage car</string>

    <!--    Add/Update car variables-->
    <string-array name="year_array">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2023</item>
    </string-array>
    <string-array name="brandList_array">
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Mercedes</item>
        <item>Ford</item>
        <item>Volkswagen</item>
    </string-array>
    <string-array name="modelList_array">
        <item>A4</item>
        <item>X5</item>
        <item>Camaro</item>
        <item>SL500</item>
        <item>F-150</item>
        <item>Beetle</item>
    </string-array>
    <string name="engineDisplacement_textView">Engine size</string>
    <string name="engineDisplacement_editText"></string>
    <string name="year_textView">Year</string>
    <string name="brand_textView">Brand</string>
    <string name="model_textView">Model</string>
    <string name="engineSize_textView">Engine size</string>
    <string name="submitCarAddUpdate_btn">Add/Update Car</string>

    <!-- Profile variables -->
    <string name="accountInfo_textView">Account Info</string>
    <string name="firstName_textView">First Name</string>
    <string name="lastName_textView">Last Name</string>
    <string name="email_textView">Email address</string>
    <string name="updateAccount_btn">Update your profile</string>
    <string name="membership_btn">Membership</string>
    <string name="logout_btn">Log out</string>

    <!--    Update profile-->
    <string name="updateAccount_textView">Update your account</string>
    <string name="password_textView">Password</string>
    <string name="passwordConf_textView">Confirm password</string>
    <string name="submitUpdateAccount_btn">Submit your updates</string>

</resources>