<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <TextView
        android:id="@+id/updateAccount_textView"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:text="@string/updateAccount_textView"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/firstName_editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="First name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/firstName_editText"
        app:layout_constraintEnd_toEndOf="@+id/updateAccount_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/updateAccount_textView"
        app:layout_constraintTop_toBottomOf="@+id/updateAccount_textView" />

    <EditText
        android:id="@+id/lastName_editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Last name"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/lastName_editText"
        app:layout_constraintEnd_toEndOf="@+id/firstName_editText"
        app:layout_constraintStart_toStartOf="@+id/firstName_editText"
        app:layout_constraintTop_toBottomOf="@+id/firstName_editText" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Email address"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/email_editText"
        app:layout_constraintEnd_toEndOf="@+id/lastName_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastName_editText"
        app:layout_constraintTop_toBottomOf="@+id/lastName_editText" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/password_editText"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

    <EditText
        android:id="@+id/passwordConf_editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:hint="Confirm your password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/passwordConf_editText"
        app:layout_constraintEnd_toEndOf="@+id/password_editText"
        app:layout_constraintStart_toStartOf="@+id/password_editText"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender_textView"
        app:layout_constraintEnd_toEndOf="@+id/passwordConf_editText"
        app:layout_constraintStart_toStartOf="@+id/passwordConf_editText"
        app:layout_constraintTop_toBottomOf="@+id/passwordConf_editText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/gender_textView"
        app:layout_constraintStart_toStartOf="@+id/gender_textView"
        app:layout_constraintTop_toBottomOf="@+id/gender_textView">

        <RadioButton
            android:id="@+id/female_rBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/female_rBtn" />

        <RadioButton
            android:id="@+id/male_rBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/male_rBtn"
            android:visibility="visible" />
    </RadioGroup>

    <Button
        android:id="@+id/submitUpdateAccount_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/submitUpdateAccount_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/firstName_textView"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/firstName_textView"
        app:layout_constraintEnd_toStartOf="@+id/updateAccount_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAccount_textView" />

    <TextView
        android:id="@+id/lastName_textView"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/lastName_textView"
        app:layout_constraintEnd_toEndOf="@+id/firstName_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstName_textView"
        app:layout_constraintTop_toBottomOf="@+id/firstName_textView" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/email_textView"
        app:layout_constraintEnd_toEndOf="@+id/lastName_textView"
        app:layout_constraintStart_toStartOf="@+id/lastName_textView"
        app:layout_constraintTop_toBottomOf="@+id/lastName_textView" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/password_textView"
        app:layout_constraintEnd_toEndOf="@+id/email_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_textView"
        app:layout_constraintTop_toBottomOf="@+id/email_textView" />

    <TextView
        android:id="@+id/passwordConf_textView"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/passwordConf_textView"
        app:layout_constraintStart_toStartOf="@+id/password_textView"
        app:layout_constraintTop_toBottomOf="@+id/password_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>