<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Fragment.GarageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/garage_2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dashboardGreeting_textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/yourGarage_textView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userCar_textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="20dp"
            android:text="@string/userCar_textView"
            android:textAlignment="textStart" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/black"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/addUpdateCar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addUpdateCar_btn" />

    </LinearLayout>

</LinearLayout>